--- a/apps/expo/src/styles.css
+++ b/apps/expo/src/styles.css
@@ -1,6 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/preflight.css";
+@import "tailwindcss/utilities.css";
 
 @import "tailwindcss/theme.css" layer(theme);
 @import "tailwindcss/preflight.css" layer(base);
