--- a/tooling/tailwind/theme.css
+++ b/tooling/tailwind/theme.css
@@ -1,15 +1,15 @@
 :root {
-  --background: oklch(0.9875 0.0045 314.8053);
+  --background: oklch(0.9846 0.0017 247.84);
   --foreground: oklch(0.2277 0.0105 312.0161);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.2277 0.0105 312.0161);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.2277 0.0105 312.0161);
-  --primary: oklch(0.5605 0.1911 350.0331);
+  --primary: oklch(0.2099 0.0341 263.44);
   --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.967 0.0106 316.4921);
+  --secondary: oklch(0.9461 0 0);
   --secondary-foreground: oklch(0.4536 0.0226 309.5036);
-  --muted: oklch(0.967 0.0106 316.4921);
+  --muted: oklch(0.9461 0 0);
   --muted-foreground: oklch(0.5653 0.021 306.4429);
   --accent: oklch(0.967 0.0106 316.4921);
   --accent-foreground: oklch(0.5605 0.1911 350.0331);
@@ -31,6 +31,8 @@
   --sidebar-accent-foreground: oklch(0.5605 0.1911 350.0331);
   --sidebar-border: oklch(0.9155 0.0235 310.6964);
   --sidebar-ring: oklch(0.5605 0.1911 350.0331);
+  --suggestion-card: oklch(0.9464 0.0327 307.17);
+  --progress-card: oklch(0.9319 0.0316 255.59);
   --radius: 0.75rem;
   --shadow-2xs: 0px 2px 10px 0px hsl(0 0% 0% / 0.03);
   --shadow-xs: 0px 2px 10px 0px hsl(0 0% 0% / 0.03);
@@ -81,6 +83,8 @@
     --sidebar-accent-foreground: oklch(0.6747 0.1492 345.9482);
     --sidebar-border: oklch(0.2941 0.0175 310.1142);
     --sidebar-ring: oklch(0.6747 0.1492 345.9482);
+    --suggestion-card: oklch(0.9419 0.016 310.0997);
+    --progress-card: oklch(0.9216 0.0122 223.1944);
     --radius: 0.75rem;
     --shadow-2xs: 0px 2px 10px 0px hsl(0 0% 0% / 0.1);
     --shadow-xs: 0px 2px 10px 0px hsl(0 0% 0% / 0.1);
@@ -131,6 +135,8 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-suggestion-card: var(--suggestion-card);
+  --color-progress-card: var(--progress-card);
 
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
